# 00_YT_General

./: .gitignore  README.md
00_Nucleo_Empty/Blank_Project/: Blank_Project.ioc
00_Nucleo_Empty/Blank_Project/Core/Src/: main.c
01_F103C6T6/F103C6T6_Blank_Project/: F103C6T6_Blank_Project.ioc
01_F103C6T6/F103C6T6_Blank_Project/Core/Src/: main.c
Blp_00_Empty_CMSIS/: Blp_00_Empty_CMSIS.ioc  CMakeLists.txt
Blp_00_Empty_CMSIS/Inc/: clock.h  main.h
Blp_00_Empty_CMSIS/Src/: clock.c  main.c  stm32f1xx_it.c
Blp_00_Empty_CMSIS/cmake/: gcc-arm-none-eabi.cmake
Blp_00_Empty_CMSIS/cmake/stm32cubemx/: CMakeLists.txt
Nuc_00_Empty_CMSIS/: CMakeLists.txt  Nuc_00_Empty_CMSIS.ioc
Nuc_00_Empty_CMSIS/Inc/: clock.h  main.h
Nuc_00_Empty_CMSIS/Src/: main.c  stm32f1xx_it.c
Nuc_00_Empty_CMSIS/cmake/: gcc-arm-none-eabi.cmake
Nuc_00_Empty_CMSIS/cmake/stm32cubemx/: CMakeLists.txt
Nuc_01_OutputSpeed/: CMakeLists.txt  Makefile  Nuc_01_OutputSpeed.ioc  README.md  flash.sh  setup.sh
Nuc_01_OutputSpeed/Core/Src/: main.c
Nuc_01_OutputSpeed/cmake/: gcc-arm-none-eabi.cmake
